# project-anthill

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: empty.yml  tf-deploy-prod.yml  tf-deploy-test.yml
automation_scripts/: daily_ingest_alphavantage.sh
conf/: logging.yml
docs/source/: conf.py  index.rst
notebook/: ex.ipynb  stock_analysis.ipynb
scripts/: __init__.py  polygon_api.py
src/: os_lib.py  polygon_api.py  settings.py  write_alphavantage_to_parquet.py  write_dividend_history_to_parquet.py  write_polygon_daily_to_parquet.py  write_polygon_intraday_to_parquet.py  write_polygon_to_parquet.py
src/modules/: __init__.py  __main__.py  os_lib.py  polygon_api.py
src/pipelines/: get_returns_df.py
src/pipelines/aggregations/: yearly_results_2024.py
src/pipelines/data_processing/: get_returns_df.py  write_alphavantage_to_parquet.py  write_dividend_history_to_parquet.py  write_market_holiday_dates.py  write_polygon_daily_to_parquet.py  write_polygon_intraday_to_parquet.py
src/pipelines/transformations/: daily_close_and_returns.py
src/tests/: README.md  pyproject.toml
src/transformations/: get_returns_df.py
terraform/: locals.tf  main.tf  outputs.tf  variables.tf
terraform/environment/aws/dev/: backends.tf  main.tf  variables.tf  versions.tf
terraform/environment/aws/prod/: variables.tf
terraform/environment/aws/test/: variables.tf
terraform/innovation_development/environment/aws/dev/: data.tf  main.tf  variables.tf  versions.tf
terraform/modules/aws/databricks/cluster/: outputs.tf
terraform/modules/aws/network/: main.tf  outputs.tf  variables.tf
(+51 files in other folders)
