[project]
name = "project-anthill"
version = "0.1.0"
description = "Repository for the Anthill project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "pandas-datareader>=0.10.0",
    "pyarrow>=20.0.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "torch>=2.7.0",
]
