[project]
name = "project-anthill"
version = "0.1.0"
description = "Repository for the Anthill project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow==3.0.2",
    "dotenv>=0.9.9",
    "kedro>=0.19.14",
    "matplotlib>=3.10.3",
    "nox[uv]>=2025.5.1",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "pandas-datareader>=0.10.0",
    "pdoc>=15.0.4",
    "polygon-api-client>=1.14.5",
    "pre-commit>=4.2.0",
    "pyarrow>=20.0.0",
    "pylint>=3.3.7",
    "ruff>=0.11.11",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "torch>=2.7.0",
    "typing>=3.10.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/modules"]

[dependency-groups]
dev = [
    "ruff>=0.11.11",
]

[tool.ruff.lint]
select = [
    "B",    # flake8-bugbear
    "E",    # pycodestyle
    "F",    # Pyflakes
    "I",    # isort
    "N",    # Pep-8 naming rules
    "UP",   # Pyupgrade
    "SIM",  # flake8-simplify
    "AIR",  # AirFlow linter
    "FAST", # FastAPI linter
]
ignore = [
    "F401", # unused-import
    "E501", # line-too-long
    "B007", # unused-loop-control-variable
]
